--- a/style.css
+++ b/style.css
@@ -259,7 +259,23 @@ margin-top: 50px;
     transform: translateY(-10px);
 }
 
-
+  
+.circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    
+    .circle img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    }
 
 
 .container{
