--- a/style.css
+++ b/style.css
@@ -97,13 +97,13 @@ margin-top: 50px;
 
 body{
     overflow: hidden;
+    color: #6f82aa;
 }
 
 .hero-header{
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    background-image: url("portifolio.png");
 }
 
 .wrapper{
