--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 #services{
-color: rgb(42, 150, 245);
+color: aliceblue;
 font-size: 20px;
 line-height: 1.4;
 margin-bottom: 4rem;
@@ -97,7 +97,7 @@ margin-top: 50px;
 
 body{
     overflow: hidden;
-    background-color: #27395e;
+    background-color: #6f82aa;
 }
 
 .hero-header{
