--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ margin-top: 50px;
 }
 
 .services-list div{
-    background-color: transparent;
+    background-color: darkcyan;
     padding: 40px;
     font-size: 13px;
     font-weight: 13px;
