--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ margin-top: 50px;
 
 body{
     overflow: hidden;
-    background-color: #6f82aa;
+    background-image:url();
 }
 
 .hero-header{
