--- a/style.css
+++ b/style.css
@@ -245,3 +245,12 @@ border-color: #007ced;
 
 }
 }
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
