--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ border-color: #007ced;
 }
 }
 footer {
-    background-color: #333;
+    background-color: #1c2468;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
