--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
-    font-weight: bolder;
+    font-weight: 800;
 }
 
 section {
