--- a/style.css
+++ b/style.css
@@ -623,7 +623,7 @@ footer {
 
 /* Dark Mode Styles */
 .dark-mode {
-    --primary-color: #4a89dc;
+    --primary-color: #0b3469;
     --secondary-color: #ff9e3f;
     --dark-color: #121212;
     --light-color: #1e1e1e;
